# kfp-local

./: .gitignore  README.md  make_pipeline.py  noxfile.py  pipeline.json  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: python-package-ci.yml
src/kfp_local/: kfp_noxfile.py  pipelines.py  run_pipeline.py
tests/: make_pipeline.py  test_pipeline.py  test_run_pipeline.py
tests/resources/: pipeline.json
tests/resources/stage-0/: output_metadata.json
