[project]
name = "kfp-local"
version = "0.1.0"
description = "Run Kubeflow Pipelines locally."
readme = "README.md"
authors = [
  { name="Alex Ioannides", email="alex@bodyworkml.com" },
]
dependencies = [
    "kfp==2.4.0",
    "nox==2023.4.22",
]

[project.optional-dependencies]
dev = [
    "black[jupyter]==23.9.1",
    "icecream",
    "ipython",
    "ipykernel",
    "mypy==1.4.1",
    "nox==2023.4.22",
    "pytest==7.4.2",
    "python-dotenv>=1.0.0",
    "ruff==0.0.290",
    "types-protobuf>=4.24.0.4"
]

[project.urls]
"Homepage" = "https://github.com/AlexIoannides/aitoolz"
"Bug Tracker" = "https://github.com/AlexIoannides/aitoolz/issues"

[project.scripts]
kfpl = "kfp_local.pipelines:_cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 88
select = [
  "D",   # pydocstyle
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "D203",    # fix pydocstyle warning
  "D213",    # fix pydocstyle warning
]

[tool.ruff.per-file-ignores]
"tests/*" = [
  "D103",
]
"scripts/*" = [
  "D103",
]
"__init__.py" = [
  "D104"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
